# Data_Structures_And_Algorithms

./: CMakeLists.txt  algotester_practice  algotester_practice.cpp  test  test.cpp
algotester/Lab1/: a1.cpp  a2.cpp  a3.cpp  a4.cpp  a5.cpp  b1.cpp  b2.cpp  b3.cpp
algotester/Lab2/: a1.cpp  a2.cpp  a3.cpp  a4.cpp  a5.cpp  b1.cpp  b2.cpp  b3.cpp
algotester/Lab3/: a1.cpp  a2.cpp  a3.cpp  a4.cpp  a5.cpp  b1.cpp  b2.cpp  b3.cpp  b3_alternative.cpp
algotester/Lab4/: a1.cpp  a2.cpp  a3.cpp  a4.cpp  a5.cpp  b1.cpp  b2.cpp  b3.cpp
algotester/Lab5/: a1.cpp  a2.cpp  a3.cpp  a4  a4.cpp  a5.cpp  b1.cpp  b2.cpp  b3.cpp
data_structures/: heap.cpp  heap.h
data_structures/linked_list/: singly_linked_list.cpp
data_structures/segment_tree/: segments_tree_sum.cpp
derivative_homework/: derivative  derivative.cpp  main  plot_all.gp  test  test.cpp
lectures_examples/: 2_planes_ternar_search.cpp  add_1_binary  add_1_binary.cpp  backpack_task.cpp  balanced_weigth.cpp  biggest_0_rectangle_area.cpp  cars_and_gas_stations.cpp  cnut_morris_prat_algorithm.cpp  coridor_and_flowers.cpp  count_inversions_in_pernutation.cpp  deputy_ties.cpp  dots_connection_distance.cpp  eratosphen_sieve.cpp  find_sum_in_array.cpp  longest_common_part_in_words.cpp  longest_increasing_subsequence.cpp  longest_mega_segment  longest_mega_segment.cpp  most_segments.cpp  permutations.cpp  polygon_triangulation.cpp  prefix_sum_1d.cpp  prefix_sum_2d.cpp  prefix_sum_with_element_replacement.cpp  segments_tree_max.cpp  sliding_window_min_element.cpp  stairs_combs.cpp
sorting_algorithms/: bubble.cpp  heap_sort.cpp  insertion.cpp  merge.cpp  merge_sort_.cpp  quick  quick.cpp  quick_sort_.cpp  selection.cpp
temp/: bs_1  bs_1.cpp  bs_2  bs_2.cpp  bs_3  bs_3.cpp  bs_4.cpp
