cmake_minimum_required(VERSION 4.1)
project(data_structures_and_algorhitms)

set(CMAKE_CXX_STANDARD 20)

add_executable(data_structures_and_algorhitms lectures_examples/permutations.cpp
        lectures_examples/add_1_binary.cpp
        lectures_examples/balanced_weigth.cpp
        lectures_examples/eratosphen_sieve.cpp
        algotester/Lab1/a1.cpp
        algotester/Lab1/a2.cpp
        algotester/Lab1/a3.cpp
        algotester/Lab1/a4.cpp
        algotester/Lab1/a5.cpp
        algotester/Lab1/b1.cpp
        algotester/Lab1/b2.cpp
        algotester/Lab1/b3.cpp
        sorting_algorithms/bubble_sort.cpp
        sorting_algorithms/insertion_sort.cpp
        sorting_algorithms/selection_sort.cpp
        sorting_algorithms/merge_sort.cpp
        sorting_algorithms/quick_sort.cpp
        test.cpp
        lectures_examples/prefix_sum_1d.cpp
        lectures_examples/find_sum_in_array.cpp
        lectures_examples/most_segments.cpp
        lectures_examples/deputy_ties.cpp
        algotester/Lab2/a1.cpp
        algotester/Lab2/a2.cpp
        algotester/Lab2/a3.cpp
        algotester/Lab2/a4.cpp
        algotester/Lab2/a5.cpp
        algotester/Lab2/b1.cpp
        algotester/Lab2/b3.cpp
        algotester/Lab2/b2.cpp
        lectures_examples/stairs_combs.cpp
        lectures_examples/longest_increasing_subsequence.cpp
        lectures_examples/longest_common_part_in_words.cpp
        lectures_examples/cars_and_gas_stations.cpp
        lectures_examples/coridor_and_flowers.cpp
        lectures_examples/polygon_triangulation.cpp
        lectures_examples/2_planes_ternar_search.cpp
        lectures_examples/prefix_sum_with_element_replacement.cpp
        algotester/Lab3/a1.cpp
        algotester/Lab3/a2.cpp
        algotester/Lab3/a3.cpp
        algotester/Lab3/a4.cpp
        algotester/Lab3/a5.cpp
        algotester/Lab3/b1.cpp
        algotester/Lab3/b2.cpp
        algotester/Lab3/b3.cpp
        data_structures/segment_tree/segments_tree_max.cpp
        data_structures/segment_tree/segments_tree_sum.cpp
        data_structures/linked_list/double_linked_list.cpp
        data_structures/linked_list/singly_linked_list.cpp
        lectures_examples/dots_connection_distance.cpp
        data_structures/heap.cpp
        sorting_algorithms/heap_sort.cpp
        sorting_algorithms/merge_sort_.cpp
        sorting_algorithms/quick_sort_.cpp
        lectures_examples/count_inversions_in_pernutation.cpp
        algotester/Lab3/b3_alternative.cpp
        algotester_practice.cpp
        lectures_examples/longest_mega_segment.cpp
        lectures_examples/cnut_morris_prat_algorithm.cpp
        lectures_examples/backpack_task.cpp
        lectures_examples/sliding_window_min_element.cpp
        lectures_examples/biggest_0_rectangle_area.cpp
        temp/bs_1.cpp
        temp/bs_2.cpp
        temp/bs_3.cpp
        temp/bs_4.cpp
        algotester/Practice1/a.cpp
)
